--- a/templates/tekken_game/header.html
+++ b/templates/tekken_game/header.html
@@ -1,66 +1,106 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TekkenGame.kg</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding-top: 60px; /* Adjusted to accommodate the fixed-top navbar */
+            margin: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: #f8f9fa;
+        }
+
+        nav.navbar {
+            background-color: #343a40; /* Dark background color */
+        }
+
+        a.navbar-brand,
+        a.navbar-toggler-icon,
+        .navbar-nav .nav-link {
+            color: #ffffff; /* Text color for links */
+        }
+
+        a.navbar-brand:hover,
+        .navbar-nav .nav-link:hover {
+            color: #ffc107; /* Hover color for links */
+        }
+
+        .navbar-toggler {
+            border: 1px solid #ffffff; /* Border color for toggler icon */
+        }
+
+        .navbar-toggler-icon {
+            background-color: #ffffff; /* Toggler icon color */
+        }
+
+        form.d-flex {
+            margin-right: 20px; /* Adjusted spacing for search form */
+        }
+
+        .container {
+            padding-top: 20px;
+        }
+
+        /* Add additional styles as needed */
+    </style>
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Главная</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="blog/">Блог</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Контакты</a>
-                </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">О нас</a>
-                </li>
-
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Галерея</a>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Действие
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/create_person/">Добавить персонажа</a></li>
-                        <li><a class="dropdown-item" href="/create_reviews/">Добавить отзыв</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/admin/">Перейти в Админ</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Отключенная</a>
-                </li>
-            </ul>
-            <form action="{% url 'search' %}" method="GET" class="d-flex" role="search">
-                <input class="form-control me-2" type="text" name="q" type="search" placeholder="Поиск" aria-label="Поиск">
-            </form>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Главная</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="blog/">Блог</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Контакты</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">О нас</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Галерея</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">Действие</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/create_person/">Добавить персонажа</a></li>
+                            <li><a class="dropdown-item" href="/create_reviews/">Добавить отзыв</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="/admin/">Перейти в Админ</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Отключенная</a>
+                    </li>
+                </ul>
+                <form action="{% url 'search' %}" method="GET" class="d-flex" role="search">
+                    <input class="form-control me-2" type="text" name="q" type="search" placeholder="Поиск" aria-label="Search">
+                </form>
+            </div>
         </div>
-    </div>
-</nav>
-<br><br><br>
+    </nav>
+
+
+</body>
+
+</html>
