--- a/templates/tekken_game/header.html
+++ b/templates/tekken_game/header.html
@@ -83,6 +83,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/create_person/">Добавить персонажа</a></li>
                             <li><a class="dropdown-item" href="/create_reviews/">Добавить отзыв</a></li>
+                            <li><a class="dropdown-item" href="/login/">Авторизоваться</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
